# VertexArrayTest

./: .gitignore  CMakeLists.txt  README.md
resources/: surface1.mtl
source/: main.cpp  vaMesh.hpp  vaModel.hpp
